# telescope-mount

./: Cargo.toml  diagram.json  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
app/: index.html
docs/: README.md
nav-app/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
nav-app/src/assets/: base.css
nav-app/src/components/: TelemountControl.vue  UiHeader.vue
nav-app/src/components/ui/button/: Button.vue
nav-app/src/lib/: bt.ts  telescope.ts
nav-app/src/router/: index.ts
nav-app/src/views/: ConnectionPage.vue  ConnectionView.vue  NavView.vue
notebooks/: accel_stepper.ipynb
scripts/: flash.sh
src/: _.rs  cube.rs  main.rs
src/ble/: mod.rs  temp.rs
src/gy87/: bits.rs  hmc5883.rs  kalman.rs  madgwick.rs  mod.rs  mpu6050.rs  qmc5883p.rs
src/stepper/: a4988.rs  mod.rs
telemount-app/: app.config.ts  app.vue  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
telemount-app/assets/css/: tailwind.css
telemount-app/components/board/: Temp.vue
telemount-app/components/connection/: Status.vue
telemount-app/components/controls/: Remote.vue  TimeCoords.vue
telemount-app/components/layout/: Header.vue
telemount-app/components/ui/button/: Button.vue
telemount-app/components/ui/dropdown-menu/: DropdownMenuItem.vue
telemount-app/layouts/: default.vue
telemount-app/lib/: bt-mock.ts  bt.ts
telemount-app/pages/: connect.vue  control.vue
telemount-app/stores/: bt.ts
telemount-app/types/: connection.ts
