[package]
authors = ["hazer-hazer <gordeev.john@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "telescope-mount"
version = "0.1.0"

[dependencies]
bleps = {git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = ["macros", "async"]}
critical-section = "1.2.0"
embassy-executor = {version = "0.7.0", features = ["task-arena-size-20480", "arch-riscv32", "executor-thread"]}
embassy-net = {version = "0.6.0", features = [
  "tcp",
  "udp",
  "dhcpv4",
  "medium-ethernet",
  "proto-ipv6",
  "log",
  "dns",
]}
embassy-sync = {version = "0.6.2"}
embassy-time = "0.4.0"
embedded-graphics = "0.8.1"
embedded-hal-async = {version = "1.0.0"}
esp-alloc = {version = "0.7.0"}
esp-backtrace = {version = "0.15.1", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
]}
esp-hal = {version = "1.0.0-beta.0", features = ["esp32c3", "unstable"]}
esp-hal-embassy = {version = "0.7.0", features = ["esp32c3"]}
esp-println = {version = "0.13.1", features = ["esp32c3", "log"]}
esp-wifi = {version = "0.13.0", features = [
  "esp32c3",
  "wifi",
  "ble",
  "esp-alloc",
  "log",
]}
heapless = "0.8.0"
log = "0.4.22"
rust-mqtt = {version = "0.3.0", default-features = false}
ssd1306 = {version = "0.10.0", features = ["async"]}
static_cell = {version = "2.0", features = ["nightly"]}
uln2003 = "0.4.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2 
debug-assertions = false 
incremental = false 
lto = 'thin' 
opt-level = 's' 
overflow-checks = false
