[package]
authors = ["hazer-hazer <gordeev.john@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "telescope-mount"
version = "0.1.0"

[dependencies]
as5600 = { version = "0.8.0", features = ["async"] }
bt-hci = { version = "0.2.1", features = ["embassy-time", "uuid", "log"] }
critical-section = "1.2.0"
embassy-embedded-hal = "0.3.0"
embassy-executor = { version = "0.7", features = [
  "task-arena-size-20480",
  "arch-riscv32",
  # "executor-thread",
] }
embassy-futures = "0.1"
# embassy-net = { version = "0.7", features = [
#   "tcp",
#   "udp",
#   "dhcpv4",
#   "medium-ethernet",
#   "proto-ipv6",
#   "log",
#   "dns",
# ] }
embassy-sync = { version = "0.6.0" }
embassy-time = "0.4"
embedded-graphics = { version = "0.8.1", features = ["nalgebra_support"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
esp-alloc = { version = "0.7" }
esp-backtrace = { version = "0.16.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "^1.0.0-beta.0", features = ["esp32c3", "unstable"] }
esp-hal-embassy = { version = "0.7", features = ["esp32c3"] }
esp-println = { version = "0.14.0", features = ["esp32c3", "log-04"] }
esp-wifi = { version = "0.13.0", features = [
  "esp32c3",
  # "wifi",
  "builtin-scheduler",
  "log",
  "ble",
  "esp-alloc",
  # "log",
] }
futures = { version = "0.3", default-features = false }
heapless = "0.8.0"
log = "0.4"
micromath = "2.1.0"
nalgebra = { version = "0.33.2", default-features = false, features = ["libm"] }
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }
# rust-mqtt = { version = "0.3.0", default-features = false }
ssd1306 = { version = "0.10.0", features = ["async"] }
static_cell = { version = "2.1", features = [] }
trouble-host = { version = "0.1.0", features = [
  "derive",
  "peripheral",
  "gatt",
  "scan",
  "log",
] }
uln2003 = "0.4.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'thin'
opt-level = 's'
overflow-checks = false
